<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:id="@+id/welcome_text" android:layout_height="wrap_content" android:text="@string/welcome_text" android:layout_gravity="center_horizontal" android:layout_width="300dip"></TextView>
    <TextView android:id="@+id/login_text" android:layout_height="wrap_content" android:text="@string/login_text" android:layout_gravity="center_horizontal" android:layout_width="300dip"></TextView>
    <TextView android:text="@string/login_id_label" android:id="@+id/login_id_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:layout_gravity="center"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/login_id" android:autoText="false" android:editable="false" android:text="Email Address" android:layout_width="300dip" android:gravity="center" android:layout_gravity="center"></EditText>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/login_pw_label" android:text="@string/login_pw_label" android:gravity="center" android:layout_gravity="center"></TextView>
    <EditText android:layout_height="wrap_content" android:text="EditText" android:password="false" android:inputType="textPassword" android:id="@+id/login_pw" android:layout_width="300dip" android:gravity="center" android:layout_gravity="center"></EditText>
    <Button android:layout_height="wrap_content" android:id="@+id/login_button" android:text="@string/login_button" android:clickable="true" android:layout_width="300dip" android:gravity="center" android:layout_gravity="center"></Button>
</LinearLayout>